Added support for entity metadata; added /entities/details endpoint; upgraded CoreApi
