# src/RadixDlt.NetworkGateway.GatewayApi/Controllers/StateController.cs
@@ -76,7 +76,7 @@ namespace RadixDlt.NetworkGateway.GatewayApi.Controllers;
 [Route("state")]
 [TypeFilter(typeof(ExceptionFilter))]
 [TypeFilter(typeof(InvalidModelStateFilter))]
-public class StateController
+public class StateController : ControllerBase
 {
     private readonly ILedgerStateQuerier _ledgerStateQuerier;
     private readonly IEntityStateQuerier _entityStateQuerier;
@@ -87,12 +87,21 @@ public class StateController
         _entityStateQuerier = entityStateQuerier;
     }
 
-    [HttpPost("")]
-    public async Task<EntityStateResponse> Snapshot(EntityStateRequest request, CancellationToken token = default)
+    [HttpPost("resources")]
+    public async Task<EntityResourcesResponse> Resources(EntityResourcesRequest request, CancellationToken token = default)
     {
         var address = RadixBech32.Decode(request.Address);
         var ledgerState = await _ledgerStateQuerier.GetValidLedgerStateForReadRequest(request.AtStateIdentifier, token);
 
-        return await _entityStateQuerier.TmpAccountResourcesSnapshot(address.Data, ledgerState, token);
+        return await _entityStateQuerier.EntityResourcesSnapshot(address.Data, ledgerState, token);
+    }
+
+    [HttpPost("details")]
+    public async Task<EntityDetailsResponse> Details(EntityDetailsRequest request, CancellationToken token = default)
+    {
+        var address = RadixBech32.Decode(request.Address);
+        var ledgerState = await _ledgerStateQuerier.GetValidLedgerStateForReadRequest(request.AtStateIdentifier, token);
+
+        return await _entityStateQuerier.EntityDetailsSnapshot(address.Data, ledgerState, token);
     }
 }
