# src/RadixDlt.NetworkGateway.GatewayApi/gateway-api-spec.yaml
@@ -154,9 +154,9 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/ErrorResponse"
-  /state:
+  /entity/resources:
     post:
-      summary: Entity State
+      summary: Entity Resources
       description: |
         TBD
       tags:
@@ -166,14 +166,40 @@ paths:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/EntityStateRequest"
+              "$ref": "#/components/schemas/EntityResourcesRequest"
       responses:
         '200':
-          description: Entity State
+          description: Entity Resources
           content:
             application/json:
               schema:
-                "$ref": "#/components/schemas/EntityStateResponse"
+                "$ref": "#/components/schemas/EntityResourcesResponse"
+        '500':
+          description: Gateway Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/ErrorResponse"
+  /entity/details:
+    post:
+      summary: Entity Details
+      description: |
+        TBD
+      tags:
+        - State
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/EntityDetailsRequest"
+      responses:
+        '200':
+          description: Entity Details
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/EntityDetailsResponse"
         '500':
           description: Gateway Error
           content:
@@ -202,7 +228,7 @@ components:
         results:
           type: array
           items: { } # any type of items
-    EntityStateRequest:
+    EntityResourcesRequest:
       type: object
       required:
         - address
@@ -212,7 +238,7 @@ components:
           type: string
         at_state_identifier:
           $ref: "#/components/schemas/PartialLedgerStateIdentifier"
-    EntityStateResponse:
+    EntityResourcesResponse:
       type: object
       required:
         - address
@@ -284,6 +310,30 @@ components:
               "$ref": "#/components/schemas/AccountIdentifier"
             amount:
               "$ref": "#/components/schemas/TokenAmount"
+    EntityDetailsRequest:
+      type: object
+      required:
+        - address
+      properties:
+        address:
+          description: The Bech32m-encoded human readable version of the entity's global address
+          type: string
+        at_state_identifier:
+          $ref: "#/components/schemas/PartialLedgerStateIdentifier"
+    EntityDetailsResponse:
+      type: object
+      required:
+        - address
+        - metadata
+      properties:
+        address:
+          description: The Bech32m-encoded human readable version of the resource's global address
+          type: string
+        metadata:
+          description: TBD
+          type: object
+          additionalProperties:
+            type: string
     AccountStakeEntry:
       type: object
       required:
